tests/negative/neg_pr115_missing_declaration_semicolon.safe
package Neg_PR115_Missing_Declaration_Semicolon

   Value : Integer = 0

   function Broken returns Integer
      return Value;

